force-app/main/default/objects/Bedrock_Asset__c/Bedrock_Asset__c.object-meta.xml
<CustomObject>
    <description>A connected piece of Bedrock equipment. In production this is standard Asset.</description>
    <label>Bedrock Asset</label>
    <nameField>
    <label>Asset Name</label>
    <type>Text</type>
</nameField>
    <pluralLabel>Bedrock Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>