force-app/main/default/objects/Bedrock_Asset__c/fields/Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Asset_Id__c</fullName>
    <description>Stable external id (e.g., ASSET-50101).</description>
    <externalId>true</externalId>
    <label>Asset Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>