force-app/main/default/objects/Bedrock_Asset__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Bedrock_Customer__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>