force-app/main/default/objects/Bedrock_Asset__c/fields/Engine_Hours__c.field-meta.xml
<CustomField>
    <fullName>Engine_Hours__c</fullName>
    <label>Engine Hours</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>