force-app/main/default/objects/Bedrock_Asset__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>