force-app/main/default/objects/Bedrock_Asset__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>