force-app/main/default/objects/Bedrock_Asset__c/fields/Model_Class__c.field-meta.xml
<CustomField>
    <fullName>Model_Class__c</fullName>
    <label>Model Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Haul Truck</fullName>
            </value>
            <value>
                <fullName>Excavator</fullName>
            </value>
            <value>
                <fullName>Dozer</fullName>
            </value>
            <value>
                <fullName>Generator</fullName>
            </value>
            <value>
                <fullName>Wheel Loader</fullName>
            </value>
            <value>
                <fullName>Backhoe Loader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>