force-app/main/default/objects/Bedrock_Asset__c/fields/Operating_Status__c.field-meta.xml
<CustomField>
    <fullName>Operating_Status__c</fullName>
    <label>Operating Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Idle</fullName>
            </value>
            <value>
                <fullName>Faulted</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>