force-app/main/default/objects/Bedrock_Asset__c/fields/Warranty_Status__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Status__c</fullName>
    <label>Warranty Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>In-Service-Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>