force-app/main/default/objects/Bedrock_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asset_Id__c</columns>
    <columns>Customer__c</columns>
    <columns>Model__c</columns>
    <columns>Warranty_Status__c</columns>
    <columns>Operating_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>